fix: prevent cogwheel overflow and correct Hero background image position

--- a/src/app/main-page/hero/hero.component.scss
+++ b/src/app/main-page/hero/hero.component.scss
@@ -29,6 +29,7 @@ section {
 
   img {
     background: url("/assets/img/Capa_bg.svg") no-repeat top center;
+    background-position: top 10% right 25%;
     background-size: min(32rem, 50dvh);
     align-self: flex-end;
   }
