--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -13,6 +13,7 @@
 
 #cogwheel-container {
   margin-top: -96px;
+  overflow: hidden;
 }
 
 // #region cogwheel animations
